Make `@QuarkusIntegrationTest`s also work with Java 23
This is basically the same issue as #723, just via `@QuarkusIntegrationTest`s, which spawn a separate process. The (JVM) arguments for this need to be specified in a different way.

This also simplifies the Quarksu service build file a little.